# wast

./: .gitignore  AGENTS.md  Cargo.toml  mise.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/: cargo-component.md  wast-spec.md  wit-syntax.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  push.sh
.github/workflows/: ci.yml  deploy-pages.yml  publish-devcontainer-image.yml
crates/cli-rust/: Cargo.toml
crates/cli-rust/src/: main.rs
crates/compiler/: Cargo.toml  PLAN.md
crates/compiler-component/: Cargo.toml
crates/compiler-component/src/: lib.rs
crates/compiler/src/: core_emit.rs  emit.rs  error.rs  lib.rs
crates/compiler/tests/: v0_10_wit_component_spike.rs  v0_12_string_len.rs  v0_13_string_literal.rs  v0_14_string_return.rs  v0_15_list.rs  v0_16_record.rs  v0_17_variant.rs  v0_18_tuple.rs  v0_19_char.rs  v0_19_enum.rs  v0_19_flags.rs  v0_1_identity.rs  v0_20_nested_compound.rs  v0_21_list_literal.rs  v0_22_deep_nested.rs  v0_23_resource.rs  v0_24_localget_nested.rs  v0_25_localget_variant.rs  v0_26_option_multislot.rs  v0_27_rv_multislot.rs  v0_28_imported_resource.rs  v0_29_hetero_result.rs  v0_2_numeric.rs  v0_30_hetero_variant.rs  v0_31_implicit_widen.rs  v0_32_hetero_construct.rs  v0_33_hetero_copy.rs  v0_34_float_reinterpret.rs  v0_35_mixed_width_copy.rs  v0_3_call.rs  v0_4_control_flow.rs  v0_5_imported_call.rs  v0_6_option_result.rs  v0_8_compound_return.rs  v0_9_match.rs  v0_smoke.rs
crates/compiler/tests/wit/: counter.wit
crates/compiler/tests/wit/exported/: counter.wit
crates/compiler/tests/wit/imported/: counter.wit
crates/demo-gen/: Cargo.toml
crates/demo-gen/src/: main.rs
crates/file-manager/: Cargo.toml  PLAN.md
crates/file-manager-hosted/: Cargo.toml
crates/file-manager-hosted/src/: lib.rs  serde_types.rs  syms_yaml.rs  wit_parser.rs
crates/file-manager/src/: lib.rs  serde_types.rs  syms_yaml.rs  wit_parser.rs
crates/partial-manager/: Cargo.toml  PLAN.md
crates/partial-manager/src/: lib.rs
crates/syntax-plugin/internal/pattern-analyzer/: Cargo.toml  PLAN.md
crates/syntax-plugin/internal/pattern-analyzer/src/: lib.rs
crates/syntax-plugin/internal/syntax-core/: Cargo.toml
crates/syntax-plugin/internal/syntax-core/src/: lib.rs
crates/syntax-plugin/raw/: Cargo.toml
crates/syntax-plugin/raw/src/: lib.rs
crates/syntax-plugin/ruby-like/: Cargo.toml  PLAN.md
crates/syntax-plugin/ruby-like/src/: convert.rs  lib.rs
crates/syntax-plugin/rust-like/: Cargo.toml  PLAN.md
crates/syntax-plugin/rust-like/src/: lib.rs
crates/syntax-plugin/ts-like/: Cargo.toml  PLAN.md
crates/syntax-plugin/ts-like/src/: lib.rs
crates/wast-codec/: Cargo.toml
crates/wast-codec/src/: lib.rs  wit_parser.rs
crates/wast-types/: Cargo.toml
crates/wast-types/src/: lib.rs
docs/: PLUGIN-AUTHORING.md
test/: cli-rust.test.mjs
wit/: PLAN.md  wast-core.wit
wit-codec/: codec.wit
wit-compiler/: compiler.wit
wit-hosted/: file-manager-hosted.wit
