[package]
name = "wast-demo-gen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wast-demo-gen"
path = "src/main.rs"

[dependencies]
wast-compiler = { path = "../compiler" }
wast-types = { path = "../wast-types" }
wast-pattern-analyzer = { path = "../syntax-plugin/internal/pattern-analyzer" }
