[package]
name = "wast-partial-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
wit-bindgen-rt = { workspace = true }
wast-pattern-analyzer = { path = "../syntax-plugin/internal/pattern-analyzer" }
postcard = { version = "1", features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wast:core"

[package.metadata.component.target]
path = "../../wit"
world = "partial-manager-world"
