[package]
name = "wast-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
wit-bindgen-rt = { workspace = true }
wast-types = { path = "../wast-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.component]
package = "wast:codec"

[package.metadata.component.target]
path = "../../wit-codec"
world = "codec-world"
