[package]
name = "wast-syntax-ts-like"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
wast-pattern-analyzer = { path = "../internal/pattern-analyzer" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wast:core"

[package.metadata.component.target]
path = "../../../wit"
world = "syntax-plugin-world"
